OOIION-1692 Wrap the labels in all panels (short text).  This prevents the values from clobbering w/ the labels.

--- a/static/css/salt.css
+++ b/static/css/salt.css
@@ -2046,6 +2046,7 @@ a.btn-navigation-plain {
   font-weight:600;
   color:#333;
   letter-spacing:1px;
+  word-wrap: break-word;
 }
 
 .v01 .text-short-value, .v02 .text-short-value {
